--- a/app/src/main/res/drawable/message_sent_background.xml
+++ b/app/src/main/res/drawable/message_sent_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#E3F2FD" />
+    <solid android:color="#FF000000" />
     <corners android:radius="12dp" />
-    <stroke android:width="1dp" android:color="#BBDEFB" />
+    <stroke android:width="1dp" android:color="#FF333333" />
 </shape>
